--- a/config.example.yml
+++ b/config.example.yml
@@ -1,12 +1,12 @@
-api_key: "CHANGE_ME"
-public_base_url: "https://storage.example.com"
-storage_root: "storage"
-max_upload_size_mb: 100
-follow_symlinks: false
-bind_host: "0.0.0.0"
-port: 4567
-puma_threads_min: 4
-puma_threads_max: 16
-log_level: info
-log_file: "log/app.log"
-timezone: "UTC"
+api_key: "!!mys3_api_key"
+public_base_url: "!!mys3_public_base_url"
+storage_root: "!!mys3_storage_root"
+max_upload_size_mb: !!mys3_max_upload_size_mb
+follow_symlinks: !!mys3_follow_symlinks
+bind_host: "!!mys3_bind_host"
+port: !!mys3_port
+puma_threads_min: !!mys3_puma_threads_min
+puma_threads_max: !!mys3_puma_threads_max
+log_level: "!!mys3_log_level"
+log_file: "!!mys3_log_file"
+timezone: "!!mys3_timezone"
